# bytebot

./: .gitignore  CLAUDE.md  PYTHON_REWRITE_PLAN.md  test_screenshot.py
bytebot-python/: PROGRESS.md  alembic.ini  pyproject.toml  rebuild.sh
bytebot-python/alembic/: env.py
bytebot-python/docker/: .env.example  Dockerfile.ai-agent  Dockerfile.computer-control  Dockerfile.shared  Dockerfile.web-ui  README.md  docker-compose.dev.yml  docker-compose.yml
bytebot-python/docker/scripts/: start-ai-agent.sh  start-computer-control.sh  start-web-ui.sh
