[tool.poetry]
name = "bytebot-python"
version = "0.1.0"
description = "AI Desktop Agent - Python Implementation"
authors = ["Bytebot Team <support@bytebot.ai>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "shared", from = "packages/shared/src"},
    {include = "computer_control", from = "packages/computer_control/src"},
    {include = "ai_agent", from = "packages/ai_agent/src"},
    {include = "web_ui", from = "packages/web_ui/src"},
]

[tool.poetry.dependencies]
python = "^3.11"
# Web Frameworks
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
streamlit = "^1.28.0"
# Database
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
# Data Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Computer Control
pyautogui = "^0.9.54"
pynput = "^1.7.6"
pillow = "^10.1.0"
# Communication
python-socketio = "^5.10.0"
websockets = "^12.0"
# AI Providers
anthropic = "^0.39.0"
openai = "^1.3.0"
google-generativeai = "^0.3.0"
# HTTP & Utilities
httpx = "^0.25.0"
python-multipart = "^0.0.6"
# Background Tasks & Scheduling
apscheduler = "^3.10.4"
# Dependency Injection
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
mypy = "^1.6.0"
ruff = "^0.1.0"
black = "^23.0.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
computer-control = "computer_control.main:main"
ai-agent = "ai_agent.main:main"
web-ui = "web_ui.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]